--- a/config.org
+++ b/config.org
@@ -11,92 +11,56 @@ This repo was adapted/modifed from Uncle Dave's Emacs, found here:
 ** Quick Installation
 =git clone https://github.com/Keyhenge/Emacs.git ~/.emacs.d=
 
-Keep in mind that you should remove your own ~/.emacs and your ~/.emacs.d
-prior to cloning this configuration. The next time you launch Emacs (and I recommend
-launching emacs in the tty for the first time) it's going to download a good amount
-of packages and configure them for you, you might see warnings and errors being
-displayed as well, those are safe to ignore as long as you relaunch emacs and
-see none.
-
-The configuration, much like emacs is self documented, I highly recommend reading
-through my ramblings in their entirety.
-
 ** Less Quick Installation
-You are free to pick out bits and pieces of this and apply them.
-So long as you have a working =use-package= configuration (take a peek at my init.el),
-there should be absolutely no issues.
-I highly encourage you to read up on the prose around the packages you are interested in,
-I do my absolute best to describe the configuration as well as I only can, this might help you on your emacs journey!
-Have some fun with it, add your own keybindings, change parameters, it's your editor in the end.
 
 ** Dependencies for:
 *** EXWM
- Since we are going to use emacs as our window manager, it would be nice to have some external software to make our life easier.
+ 
 **** From the package manager:
- - =xorg-server=, for obvious reasons. (there is no wayland support as of now)
- - =pulsemixer=, available from =https://github.com/GeorgeFilipkin/pulsemixer=.
- - =imagemagick=, if you are going to be using emacs to take screenshots.
- - =ibus-daemon=, if you need multiple keyboard input options (emacs handles them well on its own but ibus is nice).
- - =terminus-font=, for it to work out of the box, if you don't want terminus you need to edit your =init.el=.
+ - =xorg-server=, 
+ - =pulsemixer=, 
+ - =imagemagick=, 
+ - =ibus-daemon=, 
+ - =terminus-font=, 
 
 ***** Optional
- - A browser (sadly, the built in xwidgets-webkit thingie is unreliable).
- - A composite manager (highly recommended, I personally use =compton=, the built in one does not work as intended.).
- - =noto-cjk=, for all the fonts imaginable.
- - =slock=, if you would like to lock the screen.
+ - A browser 
+ - A composite manager 
+ - =noto-cjk=, 
+ - =slock=, 
 
 *** TRAMP
 **** From the package manager:
- - =sudo=, properly configured for your user.
+ - =sudo=, 
 
 *** EMMS
 **** From the package manager:
- - =mpd=, since we are going to be using EMMS for music playback, I recommend setting up a working mpd server.
- - =mpv=, for video playback.
+ - =mpd=, 
+ - =mpv=, 
 
 *** Programming
 **** Package manager
- - =clang=, for c/c++ completion.
- - =sbcl=, for clisp completion and repl.
- - =virtualenv=, for python completion.
- - =lua=, for obvious reasons.
+ - =clang=, 
+ - =sbcl=, 
+ - =virtualenv=, 
+ - =lua=, 
 
 **** pip
- - =pip install jedi flake8 autopep8=, here, a one line install.
+ - =pip install jedi flake8 autopep8=, 
 
 ** Some notes
 *** On use-package some more
- We utilize use-package to handle downloading and configuring other packages painlessly.
- With =init.el= written the way it is, emacs checks for the presence of =use-package=
- on launch and downloads it and installs if necessary.
- =el-Get= is too old and not configurable enough.
 
 *** On the format of the configuration
- As you may have noticed, as you scroll down my bit of prose, this is the configuration file itself.
- This configuration is written in =org-mode=, which is a great emacs package and a great markup language.
- On launch, this file is being sourced into =~/.emacs.d/init.el=, the prose is being automatically
- stripped (as to not affect performance) and the remaining =config.el= file is parsed.
-
- This is also the reason why your org-mode configuration file is never called =init.org=.
 
 *** On the use case of this configuration
- This entire config is meant to be used as a full on desktop environment, it is tailored to sit on top of xorg and be awesome.
- It is perfectly possible to use it without exwm and emms, as a regular emacs config, just make sure to delete the unwanted sections,
- ex.g EXWM, Audio Control, EMMS and all the launchers.
- There is barely any learning curve to using =exwm=, since it makes x-windows act as regular buffers as much as possible,
- so chances are, as long as you know your way around emacs itself, you will instinctively know how to make use of its features.
 
 *** On the keybindings
- I do my best to not pollute keymaps with my own keybindings. Most of the bindings I defined myself utilize the Super key (noted as =s-=).
- This is the least used modifier key together with Shift (noted as =S-=), thus using those, chances are all the bindings you already know
- and love are going to work flawlessly. For all the others, just keep on reading.
-
 * Interface
 ** Window Manager
- Everything regarding the WM or DE-like functionality is bundled here, remove the entire section if you do not wish to use =exwm=.
-
+ 
 *** exwm
- Necessary if using EXWM as the window manager. If not, delete or comment out the section.
+ 
 **** Installation
  +BEGIN_SRC emacs-lisp
    (use-package exwm
@@ -196,13 +160,9 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  +END_SRC
 
 *** Launchers
- Since I do not use a GUI launcher and do not have an external one like dmenu or rofi,
- I figured the best way to launch my most used applications would be direct emacsy
- keybindings.
-
+ 
 **** dmenu for emacs
- Who would've thought this was available, together with ido-vertical it's a nice large menu
- with its own cache for most launched applications.
+ 
  #+BEGIN_SRC emacs-lisp
    (use-package dmenu
      :ensure t
@@ -211,8 +171,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 **** Functions to start processes
- Functions to launch various programs. Add or change them at your leisure, just remember to bind them
- in the section below.
+ 
  #+BEGIN_SRC emacs-lisp
    (defun exwm-async-run (name)
      (interactive)
@@ -239,10 +198,10 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Audio controls
- This is a set of bindings to my XF86 keys that invokes pulsemixer with the correct parameters
+ 
 
 **** Volume modifier
- Percentage that volume increases/decreases when raising/lowering volume
+ 
  #+BEGIN_SRC emacs-lisp
  (defconst volumeModifier "2")
  #+END_SRC
@@ -263,7 +222,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 **** Keybindings to start processes
- You can also change these if you'd like, but I highly recommend keeping them the same. Chances are, they will just work.
+ 
  #+BEGIN_SRC emacs-lisp
  (global-set-key (kbd "<XF86AudioMute>") 'audio/mute)
  (global-set-key (kbd "<XF86AudioRaiseVolume>") 'audio/raise-volume)
@@ -311,18 +270,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 ** Moving around emacs
- One of the most important things about a text editor is how efficient you manage
- to be when using it, how much time do basic tasks take you and so on and so forth.
- One of those tasks is moving around files and buffers, whatever you may use emacs for
- you /will/ be jumping around buffers like it's serious business, the following
- set of enhancements aims to make it easier.
-
- As a great emacs user once said:
-
- #+BEGIN_QUOTE
- Do me the favor, do me the biggest favor, matter of fact do yourself the biggest favor and integrate those into your workflow.
- #+END_QUOTE
-
+ 
 *** Prerequisites for other packages
  #+BEGIN_SRC emacs-lisp
    (use-package ivy
@@ -330,19 +278,13 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Scrolling
- I don't know to be honest, but this little bit of code makes scrolling with emacs a lot nicer.
+
  #+BEGIN_SRC emacs-lisp
    (setq scroll-conservatively 100)
  #+END_SRC
 
 *** Which-key
- In order to use emacs, you don't need to know how to use emacs.
- It's self documenting, and coupled with this insanely useful package, it's even easier.
- In short, after you start the input of a command and stop, pondering what key must follow,
- it will automatically open a non-intrusive buffer at the bottom of the screen offering
- you suggestions for completing the command, that's it, nothing else.
 
- It's beautiful
  #+BEGIN_SRC emacs-lisp
    (use-package which-key
      :ensure t
@@ -351,19 +293,9 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Windows/Panes
- Some of us have large displays, others have tiny netbook screens, but regardless of your hardware
- you probably use more than 2 panes/windows at times, cycling through all of them with
- =C-c o= is annoying to say the least, it's a lot of keystrokes and takes time, time you could spend doing something more productive.
 
 **** switch-window
- This magnificent package takes care of this issue.
- It's unnoticeable if you have 1 or 2 panes open, but with 3 or more, upon pressing =C-x o=
- you will notice how your buffers turn a solid color and each buffer is asigned a letter
- (the list below shows the letters, you can modify them to suit your liking), upon pressing
- a letter asigned to a window, your will be taken to said window, easy to remember, quick to use
- and most importantly, it annihilates a big issue I had with emacs. An alternative is =ace-window=,
- however by default it also changes the behaviour of =C-x o= even if only 2 windows are open,
- this is bad, it also works less well with =exwm= for some reason.
+
  #+BEGIN_SRC emacs-lisp
  (use-package switch-window
    :ensure t
@@ -379,8 +311,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 **** Following window splits
- After you split a window, your focus remains in the previous one.
- This annoyed me so much I wrote these two, they take care of it.
+
  #+BEGIN_SRC emacs-lisp
    (defun split-and-follow-horizontally ()
      (interactive)
@@ -398,9 +329,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Swiper
- I like me some searching, the default search is very meh. In emacs, you mostly use search to get around your buffer,
- much like with avy, but sometimes it doesn't hurt to search for entire words or mode, swiper makes sure this is more
- efficient.
+
  #+BEGIN_SRC emacs-lisp
    (use-package swiper
      :ensure t
@@ -408,11 +337,9 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Buffers
- Another big thing is, buffers. If you use emacs, you use buffers, everyone loves them.
- Having many buffers is useful, but can be tedious to work with, let us see how we can improve it.
 
 **** Always murder current buffer
- Doing =C-x k= should kill the current buffer at all times, we have =ibuffer= for more sophisticated thing.
+
  #+BEGIN_SRC emacs-lisp
    (defun kill-current-buffer ()
      "Kills the current buffer."
@@ -422,30 +349,24 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 **** Kill buffers without asking for confirmation
- Unless you have the muscle memory, I recommend omitting this bit, as you may lose progress for no reason when working.
+
  #+BEGIN_SRC emacs-lisp
  (setq kill-buffer-query-functions (delq 'process-kill-buffer-query-function kill-buffer-query-functions))
  #+END_SRC
 
 **** Turn switch-to-buffer into ibuffer
- I don't understand how ibuffer isn't the default option by now.
- It's vastly superior in terms of ergonomics and functionality, you can delete buffers, rename buffer,
- move buffers, organize buffers etc.
+
  #+BEGIN_SRC emacs-lisp
  (global-set-key (kbd "C-x b") 'ibuffer)
  #+END_SRC
 
 ***** expert-mode
- If you feel like you know how ibuffer works and need not to be asked for confirmation after every serious command, enable this as follows.
+
  #+BEGIN_SRC emacs-lisp
  (setq ibuffer-expert t)
  #+END_SRC
 **** close-all-buffers
- It's one of those things where I genuinely have to wonder why there is no built in functionality for it.
- Once in a blue moon I need to kill all buffers, and having ~150 of them open would mean I'd need to spend a few too many
- seconds doing this than I'd like, here's a solution.
 
- This can be invoked using =C-M-s-k=. This keybinding makes sure you don't hit it unless you really want to.
  #+BEGIN_SRC emacs-lisp
    (defun close-all-buffers ()
      "Kill all buffers without regard for their origin."
@@ -455,11 +376,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Line Numbers
- Every now and then all of us feel the urge to be productive and write some code.
- In the event that this happens, the following bit of configuration makes sure that
- we have access to relative line numbering in programming-related modes.
- I highly recommend not enabling =linum-relative-mode= globally, as it messed up
- something like =ansi-term= for instance.
+
  #+BEGIN_SRC emacs-lisp
    (use-package linum-relative
      :ensure t
@@ -469,9 +386,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** ido/helm
- Sometimes, you don't realize how good something is until you try it extensively.
- I give in, helm is awesome. I'll end up customizing it more eventually,
- it's rather similar to ido-vertical though.
+
 **** helm
  #+BEGIN_SRC emacs-lisp
    (use-package helm
@@ -518,16 +433,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** avy
- Many times have I pondered how I can move around buffers even quicker.
- I'm glad to say, that avy is precisely what I needed, and it's precisely what you need as well.
- In short, as you invoke one of avy's functions, you will be prompted for a character
- that you'd like to jump to in the /visible portion of the current buffer/.
- Afterwards you will notice how all instances of said character have additional letter on top of them.
- Pressing those letters, that are next to your desired character will move your cursor over there.
- Admittedly, this sounds overly complicated and complex, but in reality takes a split second
- and improves your life tremendously.
 
- I like =M-s= for it, same as =C-s= is for moving by searching string, now =M-s= is moving by searching characters.
  #+BEGIN_SRC emacs-lisp
    (use-package avy
      :ensure t
@@ -536,11 +442,9 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 ** Text manipulation
- Here I shall collect self-made functions that make editing text easier.
 
 *** Mark-Multiple/IEdit
- I can barely contain my joy. This extension allows you to quickly mark the next occurence of a region
- and edit them all at once. Wow!
+
  #+BEGIN_SRC emacs-lisp
    (use-package mark-multiple
      :ensure t
@@ -550,9 +454,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Improved kill-word
- Why on earth does a function called =kill-word= not .. kill a word.
- It instead deletes characters from your cursors position to the end of the word,
- let's make a quick fix and bind it properly.
+
  #+BEGIN_SRC emacs-lisp
    (defun daedreth/kill-inner-word ()
      "Kills the entire word your cursor is in. Equivalent to 'ciw' in vim."
@@ -564,7 +466,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Improved copy-word
- And again, the same as above but we make sure to not delete the source word. 
+
  #+BEGIN_SRC emacs-lisp
    (defun daedreth/copy-whole-word ()
      (interactive)
@@ -577,7 +479,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Copy a line
- Regardless of where your cursor is, this quickly copies a line. 
+
  #+BEGIN_SRC emacs-lisp
    (defun daedreth/copy-whole-line ()
      "Copies a line without regard for cursor position."
@@ -591,18 +493,15 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Kill a line
- And this quickly deletes a line.
+
  #+BEGIN_SRC emacs-lisp
    (global-set-key (kbd "C-c l k") 'kill-whole-line)
  #+END_SRC
 
 ** Minor conveniences
- Emacs is at it's best when it just does things for you, shows you the way, guides you so to speak.
- This can be best achieved using a number of small extensions. While on their own they might not be particularly
- impressive. Together they create a nice environment for you to work in.
 
 *** Visiting the configuration
- Quickly edit =~/.emacs.d/config.org=
+
  #+BEGIN_SRC emacs-lisp
    (defun config-visit ()
      (interactive)
@@ -612,8 +511,6 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
 
 *** Reloading the configuration
 
- Simply pressing =Control-c r= will reload this file, very handy.
- You can also manually invoke =config-reload=.
  #+BEGIN_SRC emacs-lisp
    (defun config-reload ()
      "Reloads ~/.emacs.d/config.org at runtime"
@@ -623,17 +520,13 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Subwords
- Emacs treats camelCase strings as a single word by default, this changes said behaviour.
+
  #+BEGIN_SRC emacs-lisp
    (global-subword-mode 1)
  #+END_SRC
 
 *** Electric
- If you write any code, you may enjoy this.
- Typing the first character in a set of 2, completes the second one after your cursor.
- Opening a bracket? It's closed for you already. Quoting something? It's closed for you already.
 
- You can easily add and remove pairs yourself, have a look.
  #+BEGIN_SRC emacs-lisp
  (setq electric-pair-pairs '(
                             (?\{ . ?\})
@@ -643,15 +536,13 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
                             ))
  #+END_SRC
 
- And now to enable it
+
  #+BEGIN_SRC emacs-lisp
  (electric-pair-mode t)
  #+END_SRC
 
 *** Beacon
- While changing buffers or workspaces, the first thing you do is look for your cursor.
- Unless you know its position, you can not move it efficiently. Every time you change
- buffers, the current position of your cursor will be briefly highlighted now.
+
  #+BEGIN_SRC emacs-lisp
    (use-package beacon
      :ensure t
@@ -660,9 +551,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Rainbow
- Mostly useful if you are into web development or game development.
- Every time emacs encounters a hexadecimal code that resembles a color, it will automatically highlight
- it in the appropriate color. This is a lot cooler than you may think.
+
  #+BEGIN_SRC emacs-lisp
    (use-package rainbow-mode
      :ensure t
@@ -671,13 +560,12 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Show parens
- I forgot about that initially, it highlights matching parens when the cursor is just behind one of them.
+
  #+BEGIN_SRC emacs-lisp
    (show-paren-mode 1)
  #+END_SRC
 *** Rainbow delimiters
- Colors parentheses and other delimiters depending on their depth, useful for any language using them,
- especially lisp.
+
  #+BEGIN_SRC emacs-lisp
    (use-package rainbow-delimiters
      :ensure t
@@ -686,8 +574,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Expand region
- A pretty simple package, takes your cursor and semantically expands the region, so words, sentences, maybe the
- contents of some parentheses, it's awesome, try it out.
+
  #+BEGIN_SRC emacs-lisp
    (use-package expand-region
      :ensure t
@@ -695,9 +582,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Hungry deletion
- On the list of things I like doing, deleting big whitespaces is pretty close to the bottom.
- Backspace or Delete will get rid of all whitespace until the next non-whitespace character is encountered.
- You may not like it, thus disable it if you must, but it's pretty decent.
+
  #+BEGIN_SRC emacs-lisp
    (use-package hungry-delete
      :ensure t
@@ -706,20 +591,16 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 *** Zapping to char
- A nifty little package that kills all text between your cursor and a selected character.
- A lot more useful than you might think. If you wish to include the selected character in the killed region,
- change =zzz-up-to-char= into =zzz-to-char=.
+
  #+BEGIN_SRC emacs-lisp
    (use-package zzz-to-char
      :ensure t
      :bind ("M-z" . zzz-up-to-char))
  #+END_SRC
 ** TODO Remote editing
- I have no need to directly edit files over SSH, but what I do need is a way to edit files as root.
- Opening up nano in a terminal as root to play around with grubs default settings is a no-no, this solves that.
 
 *** Editing with sudo
- Pretty self-explanatory, useful as hell if you use exwm.
+
  #+BEGIN_SRC emacs-lisp
    (use-package sudo-edit
      :ensure t
@@ -728,18 +609,15 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 ** Kill ring
- There is a lot of customization to the kill ring, and while I have not used it much before,
- I decided that it was time to change that.
+
 *** Maximum entries on the ring
- The default is 60, I personally need more sometimes.
+
  #+BEGIN_SRC emacs-lisp
    (setq kill-ring-max 100)
  #+END_SRC
 
 *** popup-kill-ring
- Out of all the packages I tried out, this one, being the simplest, appealed to me most.
- With a simple M-y you can now browse your kill-ring like browsing autocompletion items.
- C-n and C-p totally work for this.
+
  #+BEGIN_SRC emacs-lisp
    (use-package popup-kill-ring
      :ensure t
@@ -747,6 +625,7 @@ Have some fun with it, add your own keybindings, change parameters, it's your ed
  #+END_SRC
 
 ** Elfeed
+
 #+BEGIN_SRC emacs-lisp
   (use-package elfeed
     :ensure t)
@@ -791,27 +670,27 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
 ** File system
 * TODO Theming
 ** Basic Interface Settings
- These are setting that do not depend on packages and are built-in enhancements to the UI.
 
 *** Looks
-**** Remove lame startup screen
- We use an actual replacement for it, keep reading or head directly to =dashboard=.
+**** Remove startup screen
+
  #+BEGIN_SRC emacs-lisp
  (setq inhibit-startup-message t)
  #+END_SRC
 **** Disable menus and scrollbars
- If you like using any of those, change =-1= to =1=.
+
  #+BEGIN_SRC emacs-lisp
  (tool-bar-mode -1)
  (menu-bar-mode -1)
  (scroll-bar-mode -1)
  #+END_SRC
 **** Disable bell
- This is annoying, remove this line if you like being visually reminded of events.
+
  #+BEGIN_SRC emacs-lisp
  (setq ring-bell-function 'ignore)
  #+END_SRC
 **** Set UTF-8 encoding
+
  #+BEGIN_SRC emacs-lisp
    (setq locale-coding-system 'utf-8)
    (set-terminal-coding-system 'utf-8)
@@ -820,13 +699,12 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
    (prefer-coding-system 'utf-8)
  #+END_SRC
 **** Highlight current line
- =hl-line= is awesome! It's not very awesome in the terminal version of emacs though, so we don't use that.
- Besides, it's only used for programming.
+
  #+BEGIN_SRC emacs-lisp
    (when window-system (add-hook 'prog-mode-hook 'hl-line-mode))
  #+END_SRC
 **** Pretty symbols
- Changes =lambda= to an actual symbol and a few others as well, only in the GUI version though.
+
  #+BEGIN_SRC emacs-lisp
    (when window-system
          (use-package pretty-mode
@@ -837,7 +715,7 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
 
 *** Functionality
 **** Disable backups and auto-saves
- I don't use either, you might want to turn those from =nil= to =t= if you do.
+
  #+BEGIN_SRC emacs-lisp
  (setq make-backup-files t)
  (setq auto-save-default t)
@@ -846,12 +724,13 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
  #+END_SRC
 
 **** Change yes-or-no questions into y-or-n questions
+
  #+BEGIN_SRC emacs-lisp
  (defalias 'yes-or-no-p 'y-or-n-p)
  #+END_SRC
 
 **** Async
- Lets us use asynchronous processes wherever possible, pretty useful.
+
  #+BEGIN_SRC emacs-lisp
    (use-package async
      :ensure t
@@ -859,10 +738,7 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
  #+END_SRC
 
 ** Dashboard
- This is your new startup screen, together with projectile it works in unison and
- provides you with a quick look into your latest projects and files.
- Change the welcome message to whatever string you want and
- change the numbers to suit your liking, I find 5 to be enough.
+
  #+BEGIN_SRC emacs-lisp
    (use-package dashboard
      :ensure t
@@ -889,9 +765,9 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
  #+END_SRC
 
 ** Theme
- The most important part of every configuration.
+
 *** A nice theme
- My new favourite one I guess, really decent default values.
+
  #+BEGIN_SRC emacs-lisp
    (use-package zerodark-theme
      :ensure t
@@ -900,7 +776,7 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
  #+END_SRC
 
 *** Some customization
- The theme is great, really, but some of the concepts just suck with powerline.
+
  #+BEGIN_SRC emacs-lisp
   (let ((class '((class color) (min-colors 89)))
         (default (if (true-color-p) "#abb2bf" "#afafaf"))
@@ -1014,19 +890,9 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
  #+END_SRC
 
 ** TODO Modeline
- The modeline is the heart of emacs, it offers information at all times, it's persistent
- and verbose enough to gain a full understanding of modes and states you are in.
 
- Due to the fact that we attempt to use emacs as a desktop environment replacement,
- and external bar showing the time, the battery percentage and more system info would be great to have.
- I have however abandoned polybar in favor of a heavily modified modeline, this offers me more space on the screen and better integration.
+*** Spaceline
 
- One modeline-related setting that is missing and is instead placed at the bottom is =diminish=.
-*** Spaceline!
- I may not use spacemacs, since I do not like evil-mode and find spacemacs incredibly bloated and slow,
- however it would be stupid not to acknowledge the best parts about it, the theme and their modified powerline setup.
-
- This enables spaceline, it looks better and works very well with my theme of choice.
  #+BEGIN_SRC emacs-lisp
    (use-package spaceline
      :ensure t
@@ -1039,21 +905,20 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
        (spaceline-spacemacs-theme))
  #+END_SRC
 
-*** No separator!
+*** No separator
+
  #+BEGIN_SRC emacs-lisp
    (setq powerline-default-separator nil)
  #+END_SRC
 
 *** Cursor position
- Show the current line and column for your cursor.
- We are not going to have =relative-linum-mode= in every major mode, so this is useful.
+
  #+BEGIN_SRC emacs-lisp
    (setq line-number-mode t)
    (setq column-number-mode t)
  #+END_SRC
 
 *** Clock
- If you prefer the 12hr-format, change the variable to =nil= instead of =t=.
 
 **** Time format
  #+BEGIN_SRC emacs-lisp
@@ -1062,14 +927,13 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
  #+END_SRC
 
 **** Enabling the mode
- This turns on the clock globally.
+
  #+BEGIN_SRC emacs-lisp
    (display-time-mode 1)
  #+END_SRC
 
 *** TODO Battery indicator
- A package called =fancy-battery= will be used if we are in GUI emacs, otherwise the built in battery-mode will be used.
- Fancy battery has very odd colors if used in the tty, hence us disabling it.
+
  +BEGIN_SRC emacs-lisp
    (use-package fancy-battery
      :ensure t
@@ -1082,10 +946,7 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
  #+END_SRC
 
 *** System monitor
- A teeny-tiny system monitor that can be enabled or disabled at runtime, useful for checking performance
- with power-hungry processes in ansi-term
 
- symon can be toggled on and off with =Super + h=.
  #+BEGIN_SRC emacs-lisp
    (use-package symon
      :ensure t
@@ -1094,13 +955,7 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
  #+END_SRC
 
 ** Diminishing modes
- Your modeline is sacred, and if you have a lot of modes enabled, as you will if you use this config,
- you might end up with a lot of clutter there, the package =diminish= disables modes on the mode line but keeps
- them running, it just prevents them from showing up and taking up space.
 
- *THIS WILL BE REMOVED SOON AS USE-PACKAGE HAS THE FUNCTIONALITY BUILT IN*
-
- Edit this list as you see fit!
  #+BEGIN_SRC emacs-lisp
    (use-package diminish
      :ensure t
@@ -1122,14 +977,11 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
  #+END_SRC
 
 * Programming
-Minor, non-completion related settings and plugins for writing code.
 
 ** Projectile
- Projectile is an awesome project manager, mostly because it recognizes directories
- with a =.git= directory as projects and helps you manage them accordingly.
 
 *** Enable projectile globally
- This makes sure that everything can be a project.
+
  #+BEGIN_SRC emacs-lisp
    (use-package projectile
      :ensure t
@@ -1140,11 +992,13 @@ Minor, non-completion related settings and plugins for writing code.
  #+END_SRC
 
 *** Let projectile call make
+
  #+BEGIN_SRC emacs-lisp
    (global-set-key (kbd "<f5>") 'projectile-compile-project)
  #+END_SRC
 
 ** Yasnippet
+
 #+BEGIN_SRC emacs-lisp
     (use-package yasnippet
       :ensure t
@@ -1155,16 +1009,14 @@ Minor, non-completion related settings and plugins for writing code.
 #+END_SRC
 
 ** Flycheck
+
 #+BEGIN_SRC emacs-lisp
   (use-package flycheck
     :ensure t)
 #+END_SRC
 
 ** Company mode
-I set the delay for company mode to kick in to half a second, I also make sure that
-it starts doing its magic after typing in only 2 characters.
 
-I prefer =C-n= and =C-p= to move around the items, so I remap those accordingly.
 #+BEGIN_SRC emacs-lisp
   (use-package company
     :ensure t
@@ -1181,9 +1033,7 @@ I prefer =C-n= and =C-p= to move around the items, so I remap those accordingly.
 #+END_SRC
 
 ** Git integration
- Countless are the times where I opened ansi-term to use =git= on something.
- These times are also something that I'd prefer stay in the past, since =magit= is
- great. It's easy and intuitive to use, shows its options at a keypress and much more.
+
 *** magit
  #+BEGIN_SRC emacs-lisp
    (use-package magit
@@ -1196,6 +1046,7 @@ I prefer =C-n= and =C-p= to move around the items, so I remap those accordingly.
  #+END_SRC
 
 ** Language Server Protocol
+
 #+BEGIN_SRC emacs-lisp
 ; Install relevant packages
 (use-package lsp-mode)
@@ -1229,13 +1080,9 @@ I prefer =C-n= and =C-p= to move around the items, so I remap those accordingly.
 #+END_SRC
 
 ** Specific languages
-Be it for code or prose, completion is a must.
-After messing around with =auto-completion= and =company= for a while I decided to .. use both?
-AC is for Lua/LÖVE and Company for the rest.
-
-Each category also has additional settings.
 
 *** c/c++
+
 #+BEGIN_SRC emacs-lisp
   (add-hook 'c++-mode-hook 'yas-minor-mode)
   (add-hook 'c-mode-hook 'yas-minor-mode)
@@ -1270,6 +1117,7 @@ Each category also has additional settings.
 #+END_SRC
 
 *** python
+
 #+BEGIN_SRC emacs-lisp
   (add-hook 'python-mode-hook 'yas-minor-mode)
   (add-hook 'python-mode-hook 'flycheck-mode)
@@ -1296,6 +1144,7 @@ Each category also has additional settings.
 #+END_SRC
 
 *** emacs-lisp
+
 #+BEGIN_SRC emacs-lisp
   (add-hook 'emacs-lisp-mode-hook 'eldoc-mode)
   (add-hook 'emacs-lisp-mode-hook 'yas-minor-mode)
@@ -1315,6 +1164,7 @@ Each category also has additional settings.
 #+END_SRC
 
 *** bash
+
 #+BEGIN_SRC emacs-lisp
   (add-hook 'shell-mode-hook 'yas-minor-mode)
   (add-hook 'shell-mode-hook 'flycheck-mode)
@@ -1334,6 +1184,7 @@ Each category also has additional settings.
 #+END_SRC
 
 *** lua/löve
+
 I must regrettably admit that =company= sucks with Lua/LÖVE.
 Which is also why I have =AC= now.
 I needed to do some shenanigans to get great auto-completion but here goes.
@@ -1388,6 +1239,7 @@ I needed to do some shenanigans to get great auto-completion but here goes.
 #+END_SRC
 
 *** golang
+
 #+BEGIN_SRC emacs-lisp
   ;; Set environment variables. Needed for the major mode/LSP to see go commands
   (setenv "PATH"
@@ -1421,13 +1273,6 @@ I needed to do some shenanigans to get great auto-completion but here goes.
 
 * Misc
 ** Org
- One of the absolute greatest features of emacs is called "org-mode".
- This very file has been written in org-mode, a lot of other configurations are written in org-mode, same goes for
- academic papers, presentations, schedules, blogposts and guides.
- Org-mode is one of the most complex things ever, lets make it a bit more usable with some basic configuration.
-
-
- Those are all rather self-explanatory.
 
 *** Common settings
 
@@ -1442,12 +1287,14 @@ I needed to do some shenanigans to get great auto-completion but here goes.
  #+END_SRC
 
 *** Syntax highlighting for documents exported to HTML
+
  #+BEGIN_SRC emacs-lisp
    (use-package htmlize
      :ensure t)
  #+END_SRC
 
 *** Line wrapping
+
  #+BEGIN_SRC emacs-lisp
    (add-hook 'org-mode-hook
 	     '(lambda ()
@@ -1455,12 +1302,13 @@ I needed to do some shenanigans to get great auto-completion but here goes.
  #+END_SRC
 
 *** Keybindings
+
  #+BEGIN_SRC emacs-lisp
    (global-set-key (kbd "C-c '") 'org-edit-src-code)
  #+END_SRC
 
 *** Org Bullets
- Makes it all look a bit nicer, I hate looking at asterisks.
+
  #+BEGIN_SRC emacs-lisp
    (use-package org-bullets
      :ensure t
@@ -1469,29 +1317,30 @@ I needed to do some shenanigans to get great auto-completion but here goes.
  #+END_SRC
 
 *** Easy-to-add emacs-lisp template
- Hitting tab after an "<el" in an org-mode file will create a template for elisp insertion.
+
  #+BEGIN_SRC emacs-lisp
    (add-to-list 'org-structure-template-alist
 	        '("el" "#+BEGIN_SRC emacs-lisp\n?\n#+END_SRC"))
  #+END_SRC
 
 *** Exporting options
- One of the best things about org is the ability to export your file to many formats.
- Here is how we add more of them!
 
 **** latex
+
  #+BEGIN_SRC emacs-lisp
    (when (file-directory-p "/usr/share/emacs/site-lisp/tex-utils")
      (add-to-list 'load-path "/usr/share/emacs/site-lisp/tex-utils")
      (require 'xdvi-search))
  #+END_SRC
 **** Twitter Bootstrap
+
  #+BEGIN_SRC emacs-lisp
    (use-package ox-twbs
      :ensure t)
  #+END_SRC
 
 *** Agenda
+
 #+BEGIN_SRC emacs-lisp
   (global-set-key (kbd "C-c a") 'org-agenda-list)
   (setq org-agenda-start-day "-3d")
@@ -1499,34 +1348,26 @@ I needed to do some shenanigans to get great auto-completion but here goes.
 #+END_SRC
 
 ** Instant messaging
- I like IRC, I also like other protocols but I enjoy IRC most, it's obvious that I long
- for a way to do my messaging from within emacs.
- There is plenty of IRC clients in the repositories, and some more in the emacs repositories
- but I find that the default =erc= does the job best, it's easy to use and offers some conveniences
- that more sophisticated ones don't, so I use it.
 
 *** erc, also known as "a way to ask for help on #emacs"
- You might want to edit the default nick, it's password protected anyway so don't bother.
 
 **** Some common settings
- This also hides some of the channel messages to avoid cluttering the buffer.
- The other line changes the prompt for each channel buffer to match the channel name,
- this way you always know who you are typing to.
+
  #+BEGIN_SRC emacs-lisp
-   (setq erc-nick "daedreth")
+   (setq erc-nick "keyhenge")
    (setq erc-prompt (lambda () (concat "[" (buffer-name) "]")))
    (setq erc-hide-list '("JOIN" "PART" "QUIT"))
  #+END_SRC
 
 **** Poor mans selectable server list
- What it says on the tin, this changes the =erc= history to include the server I connect to often.
+
  #+BEGIN_SRC emacs-lisp
    (setq erc-server-history-list '("irc.freenode.net"
                                    "localhost"))
  #+END_SRC
 
 **** Nick highlighting
- You can even highlight nicks to make the buffers a bit more visually pleasing and easier to look at.
+
  #+BEGIN_SRC emacs-lisp
  (use-package erc-hl-nicks
    :ensure t
@@ -1535,7 +1376,7 @@ I needed to do some shenanigans to get great auto-completion but here goes.
  #+END_SRC
 
 *** rich presence for discord
- Memes, but it's fun and tiny.
+
  #+BEGIN_SRC emacs-lisp
    (use-package elcord
      :ensure t)
@@ -1547,13 +1388,9 @@ though I'm still on the lookout for something with a better browser and a tag ed
 so that I can completely replace it.
 
 *** Mingus with mpd
- There is many backends, many players and codecs for EMMS, we use mpd now.
 
 **** Basic setup for mpd
- The non XF86 keys are made to be somewhat logical to follow and easy to remember.
- At the bottom part of the configuration, you will notice how XF86 keys are used
- by default, so unless you keyboard is broken it should work out of the box.
- Obviously you might have to adjust /server-name/ and /server-port/ to fit your configuration.
+
  #+BEGIN_SRC emacs-lisp
    (use-package mingus
      :ensure t
@@ -1567,16 +1404,14 @@ so that I can completely replace it.
 
 **** MPC Setup
 ***** Setting the default port
- We use non-default settings for the socket, to use the built in =mpc= functionality we need to set up a variable.
- Adjust according to your setup.
+
  #+BEGIN_SRC emacs-lisp
    (setq mpc-host "localhost:6601")
  #+END_SRC
 
 **** Some more fun stuff
 ***** Starting the daemon from within emacs
- If you have an absolutely massive music library, it might be a good idea to get rid of =mpc-update=
- and only invoke it manually when needed.
+
  #+BEGIN_SRC emacs-lisp
    (defun mpd/start-music-daemon ()
      "Start MPD, connects to it and syncs the metadata cache."
@@ -1590,6 +1425,7 @@ so that I can completely replace it.
  #+END_SRC
 
 ***** Killing the daemon from within emacs
+
  #+BEGIN_SRC emacs-lisp
    (defun mpd/kill-music-daemon ()
      "Stops playback and kill the music daemon."
@@ -1599,7 +1435,8 @@ so that I can completely replace it.
      (message "MPD Killed!"))
    (global-set-key (kbd "M-p k") 'mpd/kill-music-daemon)
  #+END_SRC
-***** Updating the database easily.
+
+***** Updating the database easily
  #+BEGIN_SRC emacs-lisp
    (defun mpd/update-database ()
      "Updates the MPD database synchronously."
@@ -1608,3 +1445,4 @@ so that I can completely replace it.
      (message "MPD Database Updated!"))
    (global-set-key (kbd "M-p u") 'mpd/update-database)
  #+END_SRC
+
